--- a/app/src/index.css
+++ b/app/src/index.css
@@ -15,11 +15,36 @@
     /* Hide scrollbar for IE, Edge and Firefox */
     .no-scrollbar {
         -ms-overflow-style: none;  /* IE and Edge */
-        scrollbar-width: none;  /* Firefox */
+         scrollbar-width: none;  /* Firefox */
     }
+    .show-scrollbar::-webkit-scrollbar {
+      width: 5px;
+      
+      
+    }
+    .show-scrollbar::-webkit-scrollbar-track {
+      box-shadow: inset 0 0 5px grey;
+      box-shadow: 5px 5px 15px grey;
+      border-radius: 10px;
+      padding: 2px;
+      
+    }
+    .show-scrollbar::-webkit-scrollbar-thumb {
+      background: #ffff;
+      border-radius: 10px;
+      margin: 2px;
+    }
+    .show-scrollbar::-webkit-scrollbar-thumb:hover {
+      background: grey;
+      border-radius: 10px;
+      margin: 2px;
+    }
+    
+
   }
 }
 
 body{
   background-color: #E1EDF8;
+   
 }
